--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>How much timed?</title>
-	<script src="popup.js"></script>
+	<script src="js/popup.js"></script>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 </head>
 <body>
